got some basic d3 to show

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,41 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <title>simple-flask-react-template</title>
-  </head>
-  <body>
-    <div id="content" />
-    <script src="dist/bundle.js" type="text/javascript"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <title>simple-flask-react-template</title>
+</head>
+
+<style type="text/css">
+  /* 13. Basic Styling with CSS */
+
+  /* Style the lines by removing the fill and applying a stroke */
+  .line {
+    fill: none;
+    stroke: #ffab00;
+    stroke-width: 3;
+  }
+
+  .overlay {
+    fill: none;
+    pointer-events: all;
+  }
+
+  /* Style the dots by assigning a fill and stroke */
+  .dot {
+    fill: #ffab00;
+    stroke: #fff;
+  }
+
+  .focus circle {
+    fill: none;
+    stroke: steelblue;
+  }
+</style>
+
+<body>
+  <div id="content" />
+  <script src="dist/bundle.js" type="text/javascript"></script>
+</body>
+
 </html>
