got some css on the navbar

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/styles.css">
   <title>simple-flask-react-template</title>
 </head>
 
