did stuff for testing lab

--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang ='en'>
 
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-  <title>simple-flask-react-template</title>
+  <title>Brownian</title>
+  <meta name="Description" content="Brownian is a tool that allows you to conduct analytics on any equity portfolio.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <div id="content" />
-  <script src="dist/bundle.js" type="text/javascript"></script>
+  <div id="content"></div>
+  <script src="dist/bundle.js"></script>
 </body>
 
 </html>
